# flux

./: .gitignore  Cargo.toml  build.rs
flux-gfx/: Cargo.toml
flux-gfx/examples/: cube.rs  swapchain.rs  triangle.rs
flux-gfx/src/: buffer.rs  device.rs  lib.rs  pipeline.rs  texture.rs
flux-gfx/src/backend/: mod.rs  vulkan.rs
src/: incandescent.wgsl  lib.rs  main.rs
src/components/: camera.rs  mesh.rs  mod.rs
src/core/: app.rs  input.rs  mod.rs  node.rs  prefabs.rs  scene.rs
src/ecs/: mod.rs  storage.rs  world.rs
src/gfx/: bind_group.rs  buffer.rs  components.rs  device.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  procedural.rs  renderer.rs  texture.rs
src/gfx/backend/: mod.rs  vulkan.rs
src/gfx/shaders/: axis_helper.wgsl  diffuse.wgsl  opaque.frag  opaque.frag.spv  opaque.vert  opaque.vert.spv  overlay.frag  overlay.frag.spv  overlay.vert  overlay.vert.spv  test.vert  test.vert.spv
src/math/: color.rs  mod.rs  ray.rs
src/prefabs/: camera.rs  geom.rs  mesh.rs  mod.rs
src/raytrace/: accelerator.rs  bsdf.rs  camera.rs  film.rs  hit.rs  integrator.rs  mesh.rs  mod.rs  sampler.rs  scene.rs  shape.rs
src/rt/: accelerator.rs  bsdf.rs  camera.rs  film.rs  hit.rs  integrator.rs  mod.rs  scene.rs  shape.rs
tests/: ecs_test.rs
www/: index.html
