[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bimap = "0.6"
bitflags = "1.3"
bvh = "0.6"
bytemuck = { version = "1.4", features = ["derive"] }
# cfg-if = "1"
const-fnv1a-hash = "1.1"
# env_logger = "0.9"
# enum-map = "2.4"
flux-gfx = { version = "0.1", path = "flux-gfx" }
# getrandom = { version = "0.2", features = ["js"] }
glam = "0.21"
gltf = "1.0"
image = "0.24"
instant = "0.1"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# slab = "0.4"
# specs = "0.18"
# specs-derive = "0.4"
# pollster = "0.2"
rand = "0.8"
# spirv-reflect = "0.2"
typetag = "0.2"
# vulkano = { path = "../vulkano/vulkano", version = "0.31" }
# vulkano-win = { path = "../vulkano/vulkano-win", version = "0.31" }
# wgpu = { version = "0.13", features = ["webgl"] }
winit = "0.27"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1"
# console_log = "0.2"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"
# web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
