[package]
name = "flux-gfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
bytemuck = { version = "1.4", features = ["derive"] }
lazy_static = "1.4"
raw-window-handle = "0.5"
slab = "0.4"
spirv-reflect = "0.2"
vulkano = { path = "../../vulkano/vulkano", version = "0.31" }
vulkano-win = { path = "../../vulkano/vulkano-win", version = "0.31" }
winit = "0.27"

[dev-dependencies]
image = "0.24"

[features]
default = ["vulkan"]
vulkan = []